@@ -1,6 +1,6 @@
 plugins {
 	id 'jadx-library'
-	id("net.ltgt.errorprone") version "2.0.2"
+	id("net.ltgt.errorprone") version "3.0.1"
 }
 
 dependencies {
@@ -23,32 +23,45 @@ dependencies {
 	testImplementation 'org.eclipse.jdt:ecj:3.31.0'
 	testImplementation 'tools.profiler:async-profiler:1.8.3'
 
-	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-	errorprone "com.google.errorprone:error_prone_core:2.3.2"
-	errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
-
-	annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
-	annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-5"
-	compileOnly "com.uber.nullaway:nullaway-annotations:0.10.10"
+    annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
+    implementation "edu.ucr.cs.riple.annotator:annotation-util:1.3.16-SNAPSHOT"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.2"
+    errorprone "com.google.errorprone:error_prone_core:2.35.1"
+    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
+    compileOnly "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
 }
 
 test {
 	exclude '**/tmp/*'
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    ]
+}
+def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
+def nullaway_path = project.rootProject.projectDir.toString() + "/annotator-out/nullaway.xml"
 import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
-	// remove the if condition if you want to run NullAway on test code
-	if (!name.toLowerCase().contains("test")) {
-		options.errorprone.disableAllChecks = true
-		options.errorprone {
-			check("NullAway", CheckSeverity.ERROR)
-			check("AnnotatorScanner", CheckSeverity.ERROR)
-			option("NullAway:AnnotatedPackages", "jadx.core")
-			option("NullAway:SerializeFixMetadata", "true")
-			option("NullAway:FixSerializationConfigPath", "/tmp/annotator/checker.xml")
-			option("AnnotatorScanner:ConfigPath", "/tmp/annotator/scanner.xml")
-		}
-		options.compilerArgs << "-Xmaxerrs" << "100000"
-	}
+    // remove the if condition if you want to run NullAway on test code
+    if (!name.toLowerCase().contains("test")) {
+        options.errorprone.disableAllChecks = true
+        options.errorprone {
+            check("NullAway", CheckSeverity.ERROR)
+            check("AnnotatorScanner", CheckSeverity.ERROR)
+            option("NullAway:AnnotatedPackages", "jadx.core")
+            option("NullAway:SerializeFixMetadata", "true")
+            option("NullAway:FixSerializationConfigPath", nullaway_path)
+            option("AnnotatorScanner:ConfigPath", scanner_path)
+        }
+        options.compilerArgs << "-Xmaxerrs" << "100000"
+        options.compilerArgs << "-Xmaxwarns" << "100000"
+    }
 }
